fix contact method contrast in dark mode

--- a/css/style.scss
+++ b/css/style.scss
@@ -206,7 +206,7 @@ body {
 				width: max-content;
 				opacity: 0;
 				transition: all 0.2s ease;
-				color: #333;
+				color: var(--iconColor);
 				font-size: 0.85rem;
 			}
 
